--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>srncata-maps</title>
-  </head>
-  <body class="font-sans antialiased">
-    <div id="root" class="w-full"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta name="theme-color" content="#16a34a" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>srncata-maps</title>
+</head>
+
+<body class="font-sans antialiased">
+  <div id="root" class="w-full"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
