--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="theme-color" content="#16a34a" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>srncata-maps</title>
 </head>
