--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>srncata-maps</title>
+  <title>Srncata Brnensko - Konvertor souřadnic</title>
 </head>
 
 <body class="font-sans antialiased">
